--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -1,306 +1,318 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>CryptoConnect Profile</title>
-
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-
-	<style>
-		body {
-			background-color: #000;
-			color: #fff;
-			font-family: "Poppins", sans-serif;
-		}
-
-		.outer {
-			height: 100vh;
-		}
-
-		.sidebar {
-			background: #000;
-			border-right: 1px solid #2f3336;
-			padding: 2rem 1.5rem;
-		}
-
-		.sidebar ul {
-			list-style: none;
-			padding: 0;
-		}
-
-		.sidebar ul li {
-			display: flex;
-			gap: 10px;
-			padding: 10px;
-			cursor: pointer;
-			font-size: 1.1rem;
-		}
-
-		.sidebar ul li:hover {
-			background: #16181c;
-			border-radius: 20px;
-			color: #1d9bf0;
-		}
-
-		.profile-header {
-			border-bottom: 1px solid #2f3336;
-		}
-
-		.banner {
-			height: 180px;
-			background: #111;
-		}
-
-		.profile-info {
-			padding: 1rem;
-			position: relative;
-		}
-
-		.profile-dp {
-			width: 130px;
-			height: 130px;
-			border-radius: 50%;
-			border: 4px solid #000;
-			position: absolute;
-			top: -65px;
-			left: 1rem;
-			object-fit: cover;
-		}
-
-		.profile-name {
-			margin-top: 70px;
-			font-size: 1.4rem;
-			font-weight: 700;
-		}
-
-		.profile-handle {
-			color: #777;
-		}
-
-		.profile-bio {
-			color: #ccc;
-		}
-
-		.tabs {
-			display: flex;
-			justify-content: space-around;
-			border-bottom: 1px solid #2f3336;
-		}
-
-		.tab {
-			padding: 12px;
-			cursor: pointer;
-		}
-
-		.tab:hover {
-			background: #16181c;
-		}
-
-		.tab.active {
-			border-bottom: 3px solid #1d9bf0;
-			color: #1d9bf0;
-			font-weight: 600;
-		}
-	</style>
-</head>
-
-<body>
-
-	<div class="container-fluid">
-		<div class="row outer">
-
-			<!-- Sidebar -->
-			<div class="col-md-3 sidebar d-none d-md-block">
-				<ul>
-					<li onclick="location.href='dashboard.html'"><i class='bx bx-home'></i>Home</li>
-					<li><i class='bx bx-bell'></i>Notifications</li>
-					<li><i class='bx bx-user'></i>Profile</li>
-				</ul>
-			</div>
-
-			<!-- Profile -->
-			<div class="col-12 col-md-6"
-				style="border-left:1px solid #2f3336; border-right:1px solid #2f3336; padding:0">
-
-				<div class="profile-header">
-					<div class="banner"></div>
-
-					<div class="profile-info">
-						<img src="profile.jpg" class="profile-dp">
-						<h2 class="profile-name" id="profileName"></h2>
-						<p class="profile-handle" id="profileHandle"></p>
-
-						<p class="profile-bio" id="displayBio"></p>
-
+	<!DOCTYPE html>
+	<html lang="en">
+	
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>CryptoConnect Profile</title>
+	
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+		<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+	
+		<style>
+			body {
+				background-color: #000;
+				color: #fff;
+				font-family: "Poppins", sans-serif;
+			}
+	
+			.outer {
+				height: 100vh;
+			}
+	
+			.sidebar {
+				background: #000;
+				border-right: 1px solid #2f3336;
+				padding: 2rem 1.5rem;
+			}
+	
+			.sidebar ul {
+				list-style: none;
+				padding: 0;
+			}
+	
+			.sidebar ul li {
+				display: flex;
+				gap: 10px;
+				padding: 10px;
+				cursor: pointer;
+				font-size: 1.1rem;
+			}
+	
+			.sidebar ul li:hover {
+				background: #16181c;
+				border-radius: 20px;
+				color: #1d9bf0;
+			}
+	
+			.profile-header {
+				border-bottom: 1px solid #2f3336;
+			}
+	
+			.banner {
+				height: 180px;
+				background: #111;
+			}
+	
+			.profile-info {
+				padding: 1rem;
+				position: relative;
+			}
+	
+			.profile-dp {
+				width: 130px;
+				height: 130px;
+				border-radius: 50%;
+				border: 4px solid #000;
+				position: absolute;
+				top: -65px;
+				left: 1rem;
+				object-fit: cover;
+			}
+	
+			.profile-name {
+				margin-top: 70px;
+				font-size: 1.4rem;
+				font-weight: 700;
+			}
+	
+			.profile-handle {
+				color: #777;
+			}
+	
+			.profile-bio {
+				color: #ccc;
+			}
+	
+			.tabs {
+				display: flex;
+				justify-content: space-around;
+				border-bottom: 1px solid #2f3336;
+			}
+	
+			.tab {
+				padding: 12px;
+				cursor: pointer;
+			}
+	
+			.tab:hover {
+				background: #16181c;
+			}
+	
+			.tab.active {
+				border-bottom: 3px solid #1d9bf0;
+				color: #1d9bf0;
+				font-weight: 600;
+			}
+		</style>
+	</head>
+	
+	<body>
+	
+		<div class="container-fluid">
+			<div class="row outer">
+	
+				<!-- Sidebar -->
+				<div class="col-md-3 sidebar d-none d-md-block">
+					<ul>
+						<li onclick="location.href='dashboard.html'"><i class='bx bx-home'></i>Home</li>
+						<li><i class='bx bx-bell'></i>Notifications</li>
+						<li><i class='bx bx-user'></i>Profile</li>
+					</ul>
+				</div>
+	
+				<!-- Profile -->
+				<div class="col-12 col-md-6"
+					style="border-left:1px solid #2f3336; border-right:1px solid #2f3336; padding:0">
+	
+					<div class="profile-header">
+						<div class="banner"></div>
+	
+						<div class="profile-info">
+							<img src="profile.jpg" class="profile-dp">
+							<h2 class="profile-name" id="profileName"></h2>
+							<p class="profile-handle" id="profileHandle"></p>
+	
+							<p class="profile-bio" id="displayBio"></p>
+	
+						</div>
 					</div>
+	
+					<!-- Tabs -->
+					<div class="tabs">
+						<div class="tab active" onclick="switchTab('tweets')">Tweets</div>
+						<div class="tab" onclick="switchTab('media')">Media</div>
+						<div class="tab" onclick="switchTab('likes')">Likes</div>
+					</div>
+	
+					<div id="user-posts" style="padding:1rem;"></div>
 				</div>
-
-				<!-- Tabs -->
-				<div class="tabs">
-					<div class="tab active" onclick="switchTab('tweets')">Tweets</div>
-					<div class="tab" onclick="switchTab('media')">Media</div>
-					<div class="tab" onclick="switchTab('likes')">Likes</div>
-				</div>
-
-				<div id="user-posts" style="padding:1rem;"></div>
+	
+				<div class="col-md-3 d-none d-md-block"></div>
 			</div>
-
-			<div class="col-md-3 d-none d-md-block"></div>
 		</div>
-	</div>
-
-	<script>
-		let allPosts = [];
-		let currentTab = "tweets";
-
-		async function loadUserPosts() {
-			const currentUser = JSON.parse(localStorage.getItem("currentUser"));
-
-			if (!currentUser || !currentUser.id) {
-				alert("Please login first");
-				location.href = "login.html";
-				return;
+	
+		<script>
+			let allPosts = [];
+			let currentTab = "tweets";
+			let likedPosts = [];
+	
+			async function loadUserPosts() {
+				const currentUser = JSON.parse(localStorage.getItem("currentUser"));
+	
+				if (!currentUser || !currentUser.id) {
+					alert("Please login first");
+					location.href = "login.html";
+					return;
+				}
+				document.getElementById("profileName").innerHTML = currentUser.username;
+				document.getElementById("profileHandle").innerHTML = "@" + currentUser.username;
+	
+				try {
+					const res = await fetch(`http://localhost:8080/api/posts/user/${currentUser.id}`);
+					allPosts = await res.json();
+					renderPosts();
+				} catch (err) {
+					console.error(err);
+				}
 			}
-			document.getElementById("profileName").innerHTML = currentUser.username;
-			document.getElementById("profileHandle").innerHTML = "@" + currentUser.username;
-
-			try {
-				const res = await fetch(`http://localhost:8080/api/posts/user/${currentUser.id}`);
-				allPosts = await res.json();
-				renderPosts();
-			} catch (err) {
-				console.error(err);
-			}
-		}
-
-		function renderPosts() {
-			const container = document.getElementById("user-posts");
-			container.innerHTML = "";
-
-			let filtered = [];
-
-			if (currentTab === "tweets") {
-				filtered = allPosts;
-			} else if (currentTab === "media") {
-				filtered = allPosts.filter(p => p.imageUrl);
-			}
-
-			if (filtered.length === 0) {
-				container.innerHTML = "<p style='color:#777'>No posts found</p>";
-				return;
-			}
-
-			const currentUser = JSON.parse(localStorage.getItem("currentUser"));
-
-			filtered.forEach(post => {
-				const div = document.createElement("div");
-				div.style.borderBottom = "1px solid #2f3336";
-				div.style.padding = "15px";
-
-				div.innerHTML = `
-				<div style="display:flex; justify-content:space-between;">
-					<div style="display:flex; gap:10px;">
-						<div style="width:40px;height:40px;border-radius:50%;background:#333;text-align:center;line-height:40px;">
-							${currentUser.username.charAt(0).toUpperCase()}
+	
+			function renderPosts() {
+				const container = document.getElementById("user-posts");
+				container.innerHTML = "";
+	
+				let filtered = [];
+	
+				if (currentTab === "tweets") {
+					filtered = allPosts;
+				}
+				else if (currentTab === "media") {
+					filtered = allPosts.filter(p => p.imageUrl);
+				}
+				else if (currentTab === "likes") {
+					filtered = likedPosts;
+				}
+	
+	
+				if (filtered.length === 0) {
+					container.innerHTML = "<p style='color:#777'>No posts found</p>";
+					return;
+				}
+	
+				const currentUser = JSON.parse(localStorage.getItem("currentUser"));
+	
+				filtered.forEach(post => {
+					const div = document.createElement("div");
+					div.style.borderBottom = "1px solid #2f3336";
+					div.style.padding = "15px";
+	
+					div.innerHTML = `
+					<div style="display:flex; justify-content:space-between;">
+						<div style="display:flex; gap:10px;">
+							<div style="width:40px;height:40px;border-radius:50%;background:#333;text-align:center;line-height:40px;">
+								${currentUser.username.charAt(0).toUpperCase()}
+							</div>
+							<div>
+								<p style="margin:0;font-weight:600">${currentUser.username}</p>
+								<p style="margin:0;color:#777">@${currentUser.username}</p>
+							</div>
 						</div>
-						<div>
-							<p style="margin:0;font-weight:600">${currentUser.username}</p>
-							<p style="margin:0;color:#777">@${currentUser.username}</p>
-						</div>
+						<i class='bx bx-trash-alt' style="cursor:pointer;color:#ff4d4d"
+						   onclick="deletePost(${post.id})"></i>
 					</div>
-					<i class='bx bx-trash-alt' style="cursor:pointer;color:#ff4d4d"
-					   onclick="deletePost(${post.id})"></i>
-				</div>
-
-				<p style="margin-top:10px">${post.content}</p>
-
-				${post.imageUrl ? `<img src="${post.imageUrl}" style="width:100%;border-radius:10px">` : ""}
-
-				<div style="display:flex;gap:20px;margin-top:10px;font-size:1.2rem">
-					<i class='bx bx-heart'
-					   onclick="toggleLike(${post.id})"
-					   id="like-${post.id}"
-					   style="cursor:pointer"></i>
-
-					   <span onclick="showLikedUsers(${post.id})"
-					         style="cursor:pointer;color:#1d9bf0"
-					         id="like-count-${post.id}">
-					   </span>
-
-
+	
+					<p style="margin-top:10px">${post.content}</p>
+	
+					${post.imageUrl ? `<img src="${post.imageUrl}" style="width:100%;border-radius:10px">` : ""}
+	
 					
-					<i class='bx bx-chat'></i>
-					<i class='bx bx-share'></i>
-				</div>
-			`;
-
-				container.appendChild(div);
-			});
-		}
-
-		function switchTab(tab) {
-			currentTab = tab;
-			document.querySelectorAll(".tab").forEach(t => t.classList.remove("active"));
-			event.target.classList.add("active");
-			renderPosts();
-		}
-
-		async function deletePost(id) {
-			const currentUser = JSON.parse(localStorage.getItem("currentUser"));
-			if (!confirm("Delete this post?")) return;
-
-			const res = await fetch(`http://localhost:8080/api/posts/${id}/user/${currentUser.id}`, {
-				method: "DELETE"
-			});
-
-			if (res.ok) loadUserPosts();
-			else alert("Not allowed");
-		}
-
-		loadUserPosts();
-
-
-		async function toggleLike(postId) {
-
-			const currentUser = JSON.parse(localStorage.getItem("currentUser"));
-
-			await fetch("http://localhost:8080/api/likes/toggle", {
-				method: "POST",
-				headers: {"Content-Type": "application/json"},
-				body: JSON.stringify({
-					postId: postId,
-					userId: currentUser.id,
-					username: currentUser.username
-				})
-			});
-			
-		}
-
-		async function loadLikeCount(postId) {
-			const res = await fetch(`http://localhost:8080/api/likes/count/${postId}`);
-			const count = await res.text();
-
-			document.getElementById(`like-count-${postId}`).innerText = count;
-		}
-		
-
-		async function showLikedUsers(postId) {
-
-			const res = await fetch(`http://localhost:8080/api/likes/users/${postId}`);
-			const users = await res.json();
-
-			let names = users.map(u => u.username).join("\n");
-
-			alert(names || "No likes yet");
-		}
-
-
-
-	</script>
-
-</body>
-
-</html>
+				`;
+	
+					container.appendChild(div);
+				});
+			}
+	
+	
+			async function deletePost(id) {
+				const currentUser = JSON.parse(localStorage.getItem("currentUser"));
+				if (!confirm("Delete this post?")) return;
+	
+				const res = await fetch(`http://localhost:8080/api/posts/${id}/user/${currentUser.id}`, {
+					method: "DELETE"
+				});
+	
+				if (res.ok) loadUserPosts();
+				else alert("Not allowed");
+			}
+	
+			loadUserPosts();
+	
+	
+			async function toggleLike(postId) {
+	
+				const currentUser = JSON.parse(localStorage.getItem("currentUser"));
+	
+				await fetch("http://localhost:8080/api/likes/toggle", {
+					method: "POST",
+					headers: {"Content-Type": "application/json"},
+					body: JSON.stringify({
+						postId: postId,
+						userId: currentUser.id,
+						username: currentUser.username
+					})
+				});
+	
+			}
+	
+			async function loadLikeCount(postId) {
+				const res = await fetch(`http://localhost:8080/api/likes/count/${postId}`);
+				const count = await res.text();
+	
+				document.getElementById(`like-count-${postId}`).innerText = count;
+			}
+	
+	
+			async function showLikedUsers(postId) {
+	
+				const res = await fetch(`http://localhost:8080/api/likes/users/${postId}`);
+				const users = await res.json();
+	
+				let names = users.map(u => u.username).join("\n");
+	
+				alert(names || "No likes yet");
+			}
+	
+			async function loadLikedPosts() {
+				const currentUser = JSON.parse(localStorage.getItem("currentUser"));
+	
+				const res = await fetch(
+					`http://localhost:8080/api/likes/user/${currentUser.id}`
+				);
+				const likedPostIds = await res.json();
+	
+				likedPosts = allPosts.filter(p =>
+					likedPostIds.includes(p.id)
+				);
+	
+				renderPosts();
+			}
+	
+			function switchTab(tab) {
+				currentTab = tab;
+				document.querySelectorAll(".tab").forEach(t => t.classList.remove("active"));
+				event.target.classList.add("active");
+	
+				if (tab === "likes") {
+					loadLikedPosts();
+				} else {
+					renderPosts();
+				}
+			}
+	
+	
+	
+		</script>
+	
+	</body>
+	
+	</html>
